Progress on revisions.

--- a/release/gff/gff_amharic/source/welcome/welcome.htm
+++ b/release/gff/gff_amharic/source/welcome/welcome.htm
@@ -137,6 +137,10 @@ kbd {
   padding: 2px;
   border: 1px solid black;
 }
+.key_example
+{
+  background-color: #ebebeb;
+}
 </style>
 </head>
 <body>
@@ -426,6 +430,7 @@ Observe that some keys have a small “hint” letter in the upper right corner.
 
 <img src="images/gff_amharic-default-2.jpeg" style="border: 1px solid black;" width="100%"/>
 
+<h3>Long Presses</h3>
 <p>
 As an alternative, if preferred, holding a key down for a few moments (called a “longpress”) a popup menu appears where you can tap the letter desired.  The popup menu for <code>ግ</code> is shown below:
 </p>
@@ -439,7 +444,42 @@ The modifier keys will also have popups as applicable.  For example to enter the
 <img src="images/gff_amharic-default-3.jpeg" style="border: 1px solid black;" width="100%"/>
 
 <h3>Flicks</h3>
+<p>
+Keys with hints can be &ldquo;flicked&rdquo; to type the symbol shown in the hint. A flick is a quick downward stroke (like a swipe) made on the key.
+Flicks are very convenient since they can save you from having to shift to the next keyboard view to access a letter, or avoid the need of
+making additional finger motions to type a letter. Some examples:
+</p>
+
+<dl style="text-indent: 20px">
+  <dd>• Flicking the <kbd class="key_example">ስ<sup>ሥ</sup></kbd> key will type &lsquo;ሥ &rsquo; instead of &lsquo;ስ&rsquo;.</dd>
+  <dd>• Flicking the <kbd class="key_example">$<sup>€</sup></kbd> key will type &lsquo;€&rsquo; instead of &lsquo;$&rsquo;.</dd>
+  <dd>• Flicking the <kbd class="key_example">2<sup>፪</sup></kbd> key will type &lsquo;2 &rsquo; instead of &lsquo;፪&rsquo;.</dd>
+</dl>
+
 <h3>Taps</h3>
+<p>
+By default, the keyboard keys enter the 6<sup>th</sup> order (ሳድስ) letter because the are the most frequent in Amharic vocabulary.
+Tapping a key quickly twice, a &ldquo;Double-Tap&rdquo;, will enter the 1<sup>st</sup> order (ግዕዝ) letter (the next most frequently occuring).
+When a letter has a hint, a &ldquo;Triple-Tap&rdquo; is also possible where the third tap will enter the hint letter in the first order.
+For example, the &lsquo;ብ&rsquo; key has the hint &lsquo;ቭ&rsquo;, appearing as <kbd class="key_example">ብ<sup>ቭ</sup></kbd>, tapping the key produces:
+</p>
+
+<dl style="text-indent: 20px">
+  <dd><kbd class="key_example">ብ<sup>ቭ</sup></kbd> 1 tap: ብ</dd>
+  <dd><kbd class="key_example">ብ<sup>ቭ</sup></kbd> 2 taps: በ</dd>
+  <dd><kbd class="key_example">ብ<sup>ቭ</sup></kbd> 3 taps: ቨ</dd>
+</dl>
+
+<p>
+In other cases, such as for punctuation or numerals, multiple-taps can be used in addition to a flick to type the symbol shown in the hint.
+For example, the &lsquo;2&rsquo; key has the hint &lsquo;፪&rsquo;, appearing as <kbd class="key_example">2<sup>፪</sup></kbd>, tapping the key produces: 
+</p>
+
+<dl style="text-indent: 20px">
+  <dd><kbd class="key_example">2<sup>፪</sup></kbd> 1 tap: 2</dd>
+  <dd><kbd class="key_example">2<sup>፪</sup></kbd> 2 taps: ፪</dd>
+  <dd><kbd class="key_example">2<sup>፪</sup></kbd> 3 taps: ፳</dd>
+</dl>
 
 
 <h2>Punctuation</h2>
@@ -496,7 +536,21 @@ The modifier keys will also have popups as applicable.  For example to enter the
 <h2>Letters</h2>
 
 <h3>Flicks</h3>
+
 <h3>Taps</h3>
+<p>
+By default, the keyboard keys enter the 6<sup>th</sup> order (ሳድስ) letter because the are the most frequent in Amharic vocabulary.
+Tapping a key quickly twice, a &ldquo;Double-Tap&rdquo;, will enter the 1<sup>st</sup> order (ግዕዝ) letter (the next most frequently occuring).
+When a letter has a hint, a &ldquo;Triple-Tap&rdquo; is also possible where the third tap will enter the hint letter in the first order.
+For example, the &lsquo;ብ&rsquo; key has the hint &lsquo;ቭ&rsquo;, appearing as <kbd>ብ<sup>ቭ</sup></kbd>, tapping the key produces: 
+</p>
+<dir>
+<dl>
+  <dt>Tap 1: ብ</dt>
+  <dt>Tap 2: በ</dt>
+  <dt>Tap 3: ቨ</dt>
+</dl>
+</dir>
 
 <h2>Punctuation</h2>
 <h2>Numerals</h2>
