[triqui_itunyoso] Force version bump

--- a/release/t/triqui_itunyoso/source/welcome.htm
+++ b/release/t/triqui_itunyoso/source/welcome.htm
@@ -11,6 +11,7 @@
   </style>
 </head>
 <body>
+<h1>Start Using Teclado de Triqui de Itunyoso</h1>
 <p>
 Este es un teclado móvil para el triqui de Itunyoso.
 </p><p>
