Minor UI Enhancements in Mobile

--- a/release/u/urdu_dvorak/source/readme.htm
+++ b/release/u/urdu_dvorak/source/readme.htm
@@ -18,6 +18,24 @@
   The same as Latinized Urdu (https://www.keyman.com/keyboards/latinized_urdu) but in DVorak Layout.
 </p>
 
+  <h2>Typing Guide</h2>
+
+<img src="help/hindi_urdu_alphabet.png" alt="" srcset=""><br>
+
+<h2>Desktop Keyboard Layout</h2>
+
+<img src="help/typing_layout.png" alt="" srcset=""><br>
+<img src="help/typing_layout_shift.png" alt="" srcset=""><br>
+<img src="help/typing_layout_alt.png" alt="" srcset=""><br>
+<img src="help/typing_layout_altshift.png" alt="" srcset=""><br>
+
+<h2>Mobile Desktop Layout</h2>
+
+<img src="help/mobile_layout.png" alt="" srcset=""><br>
+<img src="help/mobile_shift_layout.png" alt="" srcset=""><br>
+<img src="help/mobile_numbers_layout.png" alt="" srcset=""><br>
+<img src="help/mobile_symbols_layout.png" alt="" srcset=""><br>
+
 <p>Copyright © 3ubaidUrRe7man</p>
 
 </body>
