Completion(?) of welcome page revisions.

--- a/release/gff/gff_amharic/source/welcome/welcome.htm
+++ b/release/gff/gff_amharic/source/welcome/welcome.htm
@@ -141,6 +141,50 @@ kbd {
 {
   background-color: #ebebeb;
 }
+.geez {
+  background:  #e2f0cb ; 
+}
+.kaib {
+  background:  #ffffb5 ;
+}
+.salis {
+  background:  #fea3aa ;
+}
+.rabi {
+  background: #ccf1ff ;
+}
+.hamis {
+  background: #e0d7ff ;
+}
+.sabi {
+  background: #fad6b6 ;
+}
+.zemede-geez {
+  background: #ffffff;  color: black ;
+  background: linear-gradient(180deg, #ffffff 0%, #e2f0cb 100%);
+}
+.zemede-kaib {
+  background: #ffffff; color: black ;
+  background: linear-gradient(180deg, #ffffff 0%, #eceae4 100%);
+}
+.zemede-salis {
+  background: #ffffff;  color: black ;
+  background: linear-gradient(180deg, #ffffff 0%, #fea3aa 100%);
+}
+.zemede-rabi {
+  background: #ffffff;  color: black ;
+  background: linear-gradient(180deg, #ffffff 0%, #ccf1ff 100%);
+}
+.zemede-hamis {
+  background: #ffffff;  color: black ;
+  background: linear-gradient(180deg, #ffffff 0%, #e0d7ff 100%);
+}
+.epunct {
+  background: #f4eee7 ;
+}
+.etens {
+  background: #f3d6ce ;
+}
 </style>
 </head>
 <body>
@@ -170,8 +214,11 @@ be intuitive and natural with respect to the sounds available in the English lan
 The keyboard also supports mnemonic mappings from non-English letters found in European keyboards.
 </p>
 
-<p>A more complete typing manual is provided as <a href="https://help.keyman.com/keyboard/gff_amharic/3.2/AmharicTyping-English.pdf">a PDF file</a> with this distribution.</p>
-
+<p>
+A more complete typing manual is provided as 
+<a target="_blank" href="https://help.keyman.com/keyboard/gff_amharic/3.2/AmharicTyping-English.pdf">a PDF file (English)</a>
+(<a target="_blank" href="https://help.keyman.com/keyboard/gff_amharic/3.2/AmharicTyping-Amharic.pdf">Amharic</a>) with this distribution.
+</p>
  
 <h2><a id="letters" name="letters"></a>Typing Letters</h2>
 
@@ -419,29 +466,32 @@ hitting the punctuation key two or more times until it appears.</p>
 When the GFF Amharic mobile keyboard starts, the key layout appears as shown in the following image.  Note the relationship between the letters of the <b>middle</b> row and <b>top</b> row:
 </p>
 
-<img src="images/gff_amharic-default-1.jpeg" style="border: 1px solid black;" width="100%"/>
+<img src="images/phone/gff_amharic-phone-default-1.jpeg" style="border: 1px solid black;" width="100%"/>
 
 <p>
-Tapping a key once, the modifier letters to the left (<code>አ</code>, <code>ኡ</code>, <code>ኢ</code>) and right  (<code>ኣ</code>, <code>ኤ</code>, <code>ኦ</code>) of the spacebar. For example, tapping <code>ግ</code> the modifiers change to <code>ገ</code>, <code>ጉ</code>, <code>ጊ</code>, <code>ጋ</code>, <code>ጌ</code>, <code>ጎ</code> .  If a modifier is tapped, ግ will be updated on screen.
+Tapping a key once, the modifier letters to the left (<kbd class='geez'>አ</kbd>, <kbd class='kaib'>ኡ</kbd>, <kbd class='salis'>ኢ</kbd>) and right  (<kbd class='rabi'>ኣ</kbd>, <kbd class='hamis'>ኤ</kbd>, <kbd class='sabi'>ኦ</kbd>) of the spacebar. For example, tapping <kbd>ግ</kbd> the modifiers change to <kbd class='geez'>ገ</kbd>, <kbd class='kaib'>ጉ</kbd>, <kbd class='salis'>ጊ</kbd>, <kbd class='rabi'>ጋ</kbd>, <kbd class='hamis'>ጌ</kbd>, and <kbd class='sabi'>ጎ</kbd> .  If a modifier is tapped, ግ will be updated on screen.
 </p>
 <p>
 Observe that some keys have a small “hint” letter in the upper right corner. The hint letters can be typed by making a quick, light, downward “flick” on the key. These letters can also be typed using the “longress” approach explained in a following example.
 </p>
 
-<img src="images/gff_amharic-default-2.jpeg" style="border: 1px solid black;" width="100%"/>
+<img src="images/phone/gff_amharic-phone-default-2.jpeg" style="border: 1px solid black;" width="100%"/>
 
 <h3>Long Presses</h3>
 <p>
-As an alternative, if preferred, holding a key down for a few moments (called a “longpress”) a popup menu appears where you can tap the letter desired.  The popup menu for <code>ግ</code> is shown below:
+As an alternative, if preferred, holding a key down for a few moments (called a “longpress”) a popup menu appears where you can tap the letter desired.  The popup menu for <kbd>ግ</kbd> is shown below:
 </p>
 
-<img src="images/gff_amharic-default-4.jpeg" style="border: 1px solid black;" width="100%"/>
+<img src="images/phone/gff_amharic-phone-default-3.jpeg" style="border: 1px solid black;" width="100%"/>
 
 <p>
-The modifier keys will also have popups as applicable.  For example to enter the extended syllables for <code>ጐ</code>, <code>ጒ</code>, <code>ጓ</code>, <code>ጔ</code> and <code>ጕ</code> as shown:
+The modifier keys will also have popups as applicable.  To enter the extended syllables for <kbd class='zemede-geez'>ጐ</kbd>, 
+<kbd class='zemede-kaib'>ጕ</kbd>, <kbd class='zemede-salis'>ጒ</kbd>, <kbd class='zemede-rabi'>ጓ</kbd>, and <kbd class='zemede-hamis'>ጔ</kbd>
+type the related key. For example, the <kbd class='rabi'>ጋ<sup style="color: #777">ጓ</sup></kbd> key has the popup key <kbd class='zemede-rabi'>ጓ</kbd>
+as shown:
 </p>
 
-<img src="images/gff_amharic-default-3.jpeg" style="border: 1px solid black;" width="100%"/>
+<img src="images/phone/gff_amharic-phone-default-4.jpeg" style="border: 1px solid black;" width="100%"/>
 
 <h3>Flicks</h3>
 <p>
@@ -453,7 +503,7 @@ making additional finger motions to type a letter. Some examples:
 <dl style="text-indent: 20px">
   <dd>• Flicking the <kbd class="key_example">ስ<sup>ሥ</sup></kbd> key will type &lsquo;ሥ &rsquo; instead of &lsquo;ስ&rsquo;.</dd>
   <dd>• Flicking the <kbd class="key_example">$<sup>€</sup></kbd> key will type &lsquo;€&rsquo; instead of &lsquo;$&rsquo;.</dd>
-  <dd>• Flicking the <kbd class="key_example">2<sup>፪</sup></kbd> key will type &lsquo;2 &rsquo; instead of &lsquo;፪&rsquo;.</dd>
+  <dd>• Flicking the <kbd class="key_example">2<sup>፪</sup></kbd> key will type &lsquo;፪&rsquo; instead of &lsquo;2&rsquo;.</dd>
 </dl>
 
 <h3>Taps</h3>
@@ -484,45 +534,45 @@ For example, the &lsquo;2&rsquo; key has the hint &lsquo;፪&rsquo;, appearing a
 
 <h2>Punctuation</h2>
 
-<p>When typing letters, the <code>!</code> and <code>።</code> keys are available for entering the most common punctuation without shifting to another “layer”.  The following image shows the punctuation for a longpress of <code>!</code>:</p>
+<p>When typing letters, the <kbd class='epunct'>!</kbd> and <kbd class='epunct'>።</kbd> keys are available for entering the most common punctuation without shifting to another “layer”.  The following image shows the punctuation for a longpress of <kbd class='epunct'>!</kbd>:</p>
 
-<img src="images/gff_amharic-punctuation-1.jpeg" style="border: 1px solid black;" width="100%"/>
+<img src="images/phone/gff_amharic-phone-punctuation-1.jpeg" style="border: 1px solid black;" width="100%"/>
 
-<p>The punctuation for a longpress of <code>።</code>:</p>
+<p>The punctuation for a longpress of <kbd class='epunct'>።</kbd>:</p>
 
-<img src="images/gff_amharic-punctuation-2.jpeg" style="border: 1px solid black;" width="100%"/>
+<img src="images/phone/gff_amharic-phone-punctuation-2.jpeg" style="border: 1px solid black;" width="100%"/>
 
-<p>For additional punctuation and numerals, tap the <code>123</code> key to shift to the next layer:</p>
+<p>For additional punctuation and numerals, tap the <kbd class='epunct'>123</kbd> key to shift to the next layer:</p>
 
-<img src="images/gff_amharic-punctuation-3.jpeg" style="border: 1px solid black;" width="100%"/>
+<img src="images/phone/gff_amharic-phone-punctuation-3.jpeg" style="border: 1px solid black;" width="100%"/>
 
 <p>Note that numerals on the punctuation layer use the long press feature to make Geʾez numerals available:</p>
 
-<img src="images/gff_amharic-numerals-1.jpeg" style="border: 1px solid black;" width="100%"/>
+<img src="images/phone/gff_amharic-phone-numerals-1.jpeg" style="border: 1px solid black;" width="100%"/>
 
-<p>Tapping the <code>@</code> shifts to a 2nd layer to access all remaining punctuation:</p>
+<p>Tapping the <kbd class='epunct'>@</kbd> shifts to a 2nd layer to access all remaining punctuation:</p>
 
-<img src="images/gff_amharic-punctuation-4.jpeg" style="border: 1px solid black;" width="100%"/>
+<img src="images/phone/gff_amharic-phone-punctuation-4.jpeg" style="border: 1px solid black;" width="100%"/>
 
-<p>A tap of the <code>፩</code> key will go to the final layer where Geʾez numbers and some less used, and non-Amharic letters, can be accessed.</p>
+<p>A tap of the <kbd class='epunct'>፩</kbd> key will go to the final layer where Geʾez numbers and some less used, and non-Amharic letters, can be accessed.</p>
 
 <h2>Numerals</h2>
 
 <p>The last layer to shift to presents the Geʾez numbers, all Geʾez punctuation, letters of related languages, and a few lesser used letters that did not fit conveniently on the initial letters layer.</p>
 
-<p>Note the arrow button, <code>▶</code>, at the end of the row of Geʾez numerals, tapping it will slide the numerals to the remaining numbers that are orders of ten (e.g. ፳, ፴, ፵, etc.):</p>
+<p>Note the arrow button, <kbd class='etens'>▶</kbd>, at the end of the row of Geʾez numerals, tapping it will slide the numerals to the remaining numbers that are orders of ten (e.g. ፳, ፴, ፵, etc.):</p>
 
-<img src="images/gff_amharic-numerals-2.jpeg" style="border: 1px solid black;" width="100%"/>
+<img src="images/phone/gff_amharic-phone-numerals-2.jpeg" style="border: 1px solid black;" width="100%"/>
 
-<p>After tapping the <code>▶</code> button, the Geʾez orders of ten appear as shown:</p>
+<p>After tapping the <kbd class='etens'>▶</kbd> button, the Geʾez orders of ten appear as shown:</p>
 
-<img src="images/gff_amharic-numerals-3.jpeg" style="border: 1px solid black;" width="100%"/>
+<img src="images/phone/gff_amharic-phone-numerals-3.jpeg" style="border: 1px solid black;" width="100%"/>
 
-<p>Tapping the <code>▶</code> button again slides to the western digits, a final tap will return to the initial Geʾez numerals.</p>
+<p>Tapping the <kbd class='epunct'>▶</kbd> button again slides to the western digits, a final tap will return to the initial Geʾez numerals.</p>
 
-<img src="images/gff_amharic-numerals-4.jpeg" style="border: 1px solid black;" width="100%"/>
+<img src="images/phone/gff_amharic-phone-numerals-4.jpeg" style="border: 1px solid black;" width="100%"/>
 
-<p>Simply tap the <code>ሀለሐ</code> key to return to the starting letters layers.</p>
+<p>Simply tap the <kbd class='epunct'>ሀለሐ</kbd> key to return to the starting letters layers.</p>
 
 <hr/>
 </details>
@@ -535,25 +585,109 @@ For example, the &lsquo;2&rsquo; key has the hint &lsquo;፪&rsquo;, appearing a
 
 <h2>Letters</h2>
 
+<p>
+When the GFF Amharic mobile keyboard starts, the key layout appears as shown in the following image.  Note the relationship between the letters of the <b>middle</b> row and <b>top</b> row:
+</p>
+
+<img src="images/tablet/gff_amharic-tablet-default-1.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>
+Tapping a key once, the modifier letters to the left (<kbd class='geez'>አ</kbd>, <kbd class='kaib'>ኡ</kbd>, <kbd class='salis'>ኢ</kbd>) and right  (<kbd class='rabi'>ኣ</kbd>, <kbd class='hamis'>ኤ</kbd>, <kbd class='sabi'>ኦ</kbd>) of the spacebar. For example, tapping <kbd>ግ</kbd> the modifiers change to <kbd class='geez'>ገ</kbd>, <kbd class='kaib'>ጉ</kbd>, <kbd class='salis'>ጊ</kbd>, <kbd class='rabi'>ጋ</kbd>, <kbd class='hamis'>ጌ</kbd>, and <kbd class='sabi'>ጎ</kbd> .  If a modifier is tapped, ግ will be updated on screen.
+</p>
+<p>
+Observe that some keys have a small “hint” letter in the upper right corner. The hint letters can be typed by making a quick, light, downward “flick” on the key. These letters can also be typed using the “longress” approach explained in a following example.
+</p>
+
+<img src="images/tablet/gff_amharic-tablet-default-2.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<h3>Long Presses</h3>
+<p>
+As an alternative, if preferred, holding a key down for a few moments (called a “longpress”) a popup menu appears where you can tap the letter desired.  The popup menu for <kbd>ግ</kbd> is shown below:
+</p>
+
+<img src="images/tablet/gff_amharic-tablet-default-3.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>
+The modifier keys will also have popups as applicable.  To enter the extended syllables for <kbd class='zemede-geez'>ጐ</kbd>, 
+<kbd class='zemede-kaib'>ጕ</kbd>, <kbd class='zemede-salis'>ጒ</kbd>, <kbd class='zemede-rabi'>ጓ</kbd>, and <kbd class='zemede-hamis'>ጔ</kbd>
+type the related key. For example, the <kbd class='rabi'>ጋ<sup style="color: #777">ጓ</sup></kbd> key has the popup key <kbd class='zemede-rabi'>ጓ</kbd>
+as shown:
+</p>
+
+<img src="images/tablet/gff_amharic-tablet-default-4.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>Note that Geʾez numerals are available by using a long press on the number keys:</p>
+
+<img src="images/tablet/gff_amharic-tablet-numerals-1.jpeg" style="border: 1px solid black;" width="100%"/>
+
 <h3>Flicks</h3>
+<p>
+Keys with hints can be &ldquo;flicked&rdquo; to type the symbol shown in the hint. A flick is a quick downward stroke (like a swipe) made on the key.
+Flicks are very convenient since they can save you from having to shift to the next keyboard view to access a letter, or avoid the need of
+making additional finger motions to type a letter. Some examples:
+</p>
+
+<dl style="text-indent: 20px">
+  <dd>• Flicking the <kbd class="key_example">ስ<sup>ሥ</sup></kbd> key will type &lsquo;ሥ &rsquo; instead of &lsquo;ስ&rsquo;.</dd>
+  <dd>• Flicking the <kbd class="key_example">$<sup>€</sup></kbd> key will type &lsquo;€&rsquo; instead of &lsquo;$&rsquo;.</dd>
+  <dd>• Flicking the <kbd class="key_example">2<sup>፪@</sup></kbd> key will type &lsquo;፪&rsquo; instead of &lsquo;2&rsquo;.</dd>
+</dl>
+
+<p>
+Note that two flicks are possible on the numeral keys. An <em>upward</em> flick is also available, for example an upward flick on the
+<kbd class="key_example">2<sup>፪@</sup></kbd> key will type &lsquo;@&rsquo; instead of &lsquo;2&rsquo;.</dd>
+</p>
+
 
 <h3>Taps</h3>
 <p>
 By default, the keyboard keys enter the 6<sup>th</sup> order (ሳድስ) letter because the are the most frequent in Amharic vocabulary.
 Tapping a key quickly twice, a &ldquo;Double-Tap&rdquo;, will enter the 1<sup>st</sup> order (ግዕዝ) letter (the next most frequently occuring).
 When a letter has a hint, a &ldquo;Triple-Tap&rdquo; is also possible where the third tap will enter the hint letter in the first order.
-For example, the &lsquo;ብ&rsquo; key has the hint &lsquo;ቭ&rsquo;, appearing as <kbd>ብ<sup>ቭ</sup></kbd>, tapping the key produces: 
+For example, the &lsquo;ብ&rsquo; key has the hint &lsquo;ቭ&rsquo;, appearing as <kbd class="key_example">ብ<sup>ቭ</sup></kbd>, tapping the key produces:
 </p>
-<dir>
-<dl>
-  <dt>Tap 1: ብ</dt>
-  <dt>Tap 2: በ</dt>
-  <dt>Tap 3: ቨ</dt>
+
+<dl style="text-indent: 20px">
+  <dd><kbd class="key_example">ብ<sup>ቭ</sup></kbd> 1 tap: ብ</dd>
+  <dd><kbd class="key_example">ብ<sup>ቭ</sup></kbd> 2 taps: በ</dd>
+  <dd><kbd class="key_example">ብ<sup>ቭ</sup></kbd> 3 taps: ቨ</dd>
 </dl>
-</dir>
+
+<p>
+In other cases, such as for punctuation or numerals, multiple-taps can be used in addition to a flick to type the symbol shown in the hint.
+For example, the &lsquo;2&rsquo; key has the hint &lsquo;፪@&rsquo;, appearing as <kbd class="key_example">2<sup>፪@</sup></kbd>, tapping the key produces: 
+</p>
+
+<dl style="text-indent: 20px">
+  <dd><kbd class="key_example">2<sup>፪@</sup></kbd> 1 tap: 2</dd>
+  <dd><kbd class="key_example">2<sup>፪@</sup></kbd> 2 taps: @</dd>
+</dl>
+
 
 <h2>Punctuation</h2>
+
+<p>When typing letters, the <kbd>!</kbd> and <kbd class='epunct'>።</kbd> keys are available for entering the most common punctuation without shifting to another “layer”.  The following image shows the punctuation for a longpress of <kbd>!</kbd>:</p>
+
+<img src="images/tablet/gff_amharic-tablet-punctuation-1.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>The punctuation for a longpress of <kbd class='epunct'>።</kbd>:</p>
+
+<img src="images/tablet/gff_amharic-tablet-punctuation-2.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>For additional punctuation and numerals, tap the <kbd class='epunct'>@</kbd> key to shift to the next layer:</p>
+
+<img src="images/tablet/gff_amharic-tablet-punctuation-3.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>A tap of the <kbd class='epunct'>፩፪፫</kbd> key will go to the final layer where Geʾez numbers and some less used, and non-Amharic letters, can be accessed.</p>
+
 <h2>Numerals</h2>
+
+<p>The last layer to shift to presents the Geʾez numbers, all Geʾez punctuation, letters of related languages, and a few lesser used letters that did not fit conveniently on the initial letters layer.</p>
+
+<img src="images/tablet/gff_amharic-tablet-numerals-2.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>Simply tap the <kbd class='epunct'>ሀለሐ</kbd> key to return to the starting letters layers.</p>
+
 </details>
 </div>
 
@@ -615,8 +749,9 @@ For example, the &lsquo;ብ&rsquo; key has the hint &lsquo;ቭ&rsquo;, appearing
 </p>
 <p>
 <ul>
-  <li>ትዕምርተ ጭረት (Apostrophe)፣ ' ፣ ተከታዩን ሳድስ ፊደልን (6<sup>ኛው</sup> ቅርፅ) የሚያቋርጥ ነው። ለምሳሌ፦ <kbd>gebr'iel</kbd> ሲፃፍ «ገብርኤል» ይሆናል፤  <kbd>gebriel</kbd> የሚለው «ገብሬል» እንዳይሆን ያደርገዋል።</p>
+  <li>ትዕምርተ ጭረት (Apostrophe)፣ ' ፣ ተከታዩን ሳድስ ፊደልን (6<sup>ኛው</sup> ቅርፅ) የሚያቋርጥ ነው። ለምሳሌ፦ <kbd>g</kbd><kbd>e</kbd><kbd>b</kbd><kbd>r</kbd><kbd>'</kbd><kbd>i</kbd><kbd>e</kbd><kbd>l</kbd> ሲፃፍ «ገብርኤል» ይሆናል፤ <kbd>g</kbd><kbd>e</kbd><kbd>b</kbd><kbd>r</kbd><kbd>i</kbd><kbd>e</kbd><kbd>l</kbd> የሚለው «ገብሬል» እንዳይሆን ያደርገዋል።</li>
 </ul>
+<br/>
 </p>
 
 <div style="margin-left: 1em;">
@@ -809,7 +944,7 @@ For example, the &lsquo;ብ&rsquo; key has the hint &lsquo;ቭ&rsquo;, appearing
 
 <h2>ፈቃድ</h2>
 
-<p>ይህ የታይፕ ሰሌዳ የቅጂ መብት (copyright) አለው © ግዕዝ ፍሮንቲር ድርጅት፣. በMIT ነፃ ሶፍትዌር ፈቃድ ስር ይከፋፈላል፦</p>
+<p>ይህ የታይፕ ሰሌዳ የቅጂ መብት (Copyright) አለው © ግዕዝ ፍሮንቲር ድርጅት፣. በMIT ነፃ ሶፍትዌር ፈቃድ ስር ይከፋፈላል፦</p>
 
 <div style="margin-left: 1em;">
   <table>
