Revision of help/gff_amharic.php to synch with welcome.htm

--- a/release/gff/gff_amharic/source/welcome/welcome.htm
+++ b/release/gff/gff_amharic/source/welcome/welcome.htm
@@ -568,7 +568,7 @@ For example, the &lsquo;2&rsquo; key has the hint &lsquo;፪&rsquo;, appearing a
 
 <img src="images/phone/gff_amharic-phone-numerals-3.jpeg" style="border: 1px solid black;" width="100%"/>
 
-<p>Tapping the <kbd class='epunct'>▶</kbd> button again slides to the western digits, a final tap will return to the initial Geʾez numerals.</p>
+<p>Tapping the <kbd class="key_example">▶</kbd> button again slides to the western digits, a final tap will return to the initial Geʾez numerals.</p>
 
 <img src="images/phone/gff_amharic-phone-numerals-4.jpeg" style="border: 1px solid black;" width="100%"/>
 
