--- a/release/u/urdu_dvorak/source/welcome.htm
+++ b/release/u/urdu_dvorak/source/welcome.htm
@@ -20,7 +20,7 @@
 
 <h2>Typing Guide</h2>
 
-<img src="help/hindi_urdu_alphabet.png" alt="" srcset=""><br>
+<img src="help/hindi_urdu_alphabet.png" style="width:40%; height:auto;" alt="" srcset=""><br>
 
 <h2>Desktop Keyboard Layout</h2>
 
