--- a/release/u/urdu_dvorak/source/welcome.htm
+++ b/release/u/urdu_dvorak/source/welcome.htm
@@ -20,21 +20,21 @@
 
 <h2>Typing Guide</h2>
 
-<img src="help/hindi_urdu_alphabet.png" style="width:40%; height:auto;" alt="" srcset=""><br>
+<img src="hindi_urdu_alphabet.png" style="width:40%; height:auto;" alt="" srcset=""><br>
 
 <h2>Desktop Keyboard Layout</h2>
 
-<img src="help/typing_layout.png" alt="" srcset=""><br>
-<img src="help/typing_layout_shift.png" alt="" srcset=""><br>
-<img src="help/typing_layout_alt.png" alt="" srcset=""><br>
-<img src="help/typing_layout_altshift.png" alt="" srcset=""><br>
+<img src="typing_layout.png" alt="" srcset=""><br>
+<img src="typing_layout_shift.png" alt="" srcset=""><br>
+<img src="typing_layout_alt.png" alt="" srcset=""><br>
+<img src="typing_layout_altshift.png" alt="" srcset=""><br>
 
 <h2>Mobile Desktop Layout</h2>
 
-<img src="help/mobile_layout.png" alt="" srcset=""><br>
-<img src="help/mobile_shift_layout.png" alt="" srcset=""><br>
-<img src="help/mobile_numbers_layout.png" alt="" srcset=""><br>
-<img src="help/mobile_symbols_layout.png" alt="" srcset=""><br>
+<img src="mobile_layout.png" alt="" srcset=""><br>
+<img src="mobile_shift_layout.png" alt="" srcset=""><br>
+<img src="mobile_numbers_layout.png" alt="" srcset=""><br>
+<img src="mobile_symbols_layout.png" alt="" srcset=""><br>
 
 </body>
 </html>
