--- a/release/b/burushaski_girminas_perso_arabic/source/readme.htm
+++ b/release/b/burushaski_girminas_perso_arabic/source/readme.htm
@@ -18,7 +18,7 @@
   <a href="https://www.burusho.org/Orthography" target="_blank">Burushaski
   Orthography</a> and use the guide that will open up once you install the
   keyboard. <br>
-  <p>Please download <a href="https://github.com/quwatsunny/fonts/raw/main/Burushaski%20Quwatz%20Nastaliq/Burusho_Quwatz_Nastaliq.ttf"> Burushaski Quwatz Nastaliq </a> font to write in this particular script.
+  <p>Please download <a href="https://github.com/quwatsunny/fonts/tree/main"> Burushaski Fonts </a> font to write in this particular script.
 </p>
 </body>
 
