--- a/release/b/burushaski_girminas_perso_arabic/source/welcome/welcome.htm
+++ b/release/b/burushaski_girminas_perso_arabic/source/welcome/welcome.htm
@@ -39,8 +39,8 @@
         <p align="right" lang="en-CA">اپنے کمپیوٹڑ پر&nbsp; <span lang="hi-IN">بروشسکی
         رسم الخط میں لکھنے کےلیے مخصوص فونٹ&nbsp; </span><span lang="en-CA"><a
 
-          href="https://github.com/quwatsunny/fonts/archive/refs/heads/main.zip">Burushaski
-          Quwatz Nastaliq</a> </span><span lang="en-CA"> </span><span lang="hi-IN">کا
+          href="https://github.com/quwatsunny/fonts/tree/main">Burushaski
+          Quwatz Nastaliq, Burushaski Quwatz Yasin</a> </span><span lang="en-CA"> </span><span lang="hi-IN">کا
         استعمال کریں۔ </span> </p>
     <p align="right"><span style="color: #191f19;">Copyright © Quwat K. Sunny</span></p>
   </body>
